# game_engine

./: .gitignore  README.md
client/: README.md  index.js  package.json
game_engine/: CMakeLists.txt  build_integrated.sh
game_engine/hotpocket_deployment/: hp.cfg.override  run_contract.sh
game_engine/hotpocket_deployment/game_data/: game_state_premade_crystal_cave.txt  game_world_premade_crystal_cave.txt  nft_premade_crystal_cave.json  nft_premade_crystal_cave_1.json  nft_premade_crystal_cave_2.json  nft_premade_crystal_cave_3.json  nft_premade_crystal_cave_4.json  nft_premade_crystal_cave_5.json
game_engine/hotpocket_deployment/xahau_signer/: index.js
game_engine/src/: ai_jury_daemon.cpp  ai_jury_module.cpp  ai_jury_module.h  jury_testing_contract.cpp  nft_minting_client.cpp  nft_minting_client.h
game_engine/src/game_engine/: ai_contract.cpp  ai_daemon.cpp  ai_service_client.h
game_engine/xahau_signer/: example.env  index.js  package.json
game_engine/xahau_signer/assets/metadata/: crystal_of_power.json  torch.json
